--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para mi amor 💖</title>
+    <title>Para ti ❤️</title>
 
-    <!-- Bootstrap 5.3.8 CSS -->
+    <!-- Bootstrap 5.3.8 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- CSS propio -->
@@ -13,54 +12,85 @@
 </head>
 <body>
 
-<!-- HERO / HEADER -->
-<header class="hero text-center d-flex flex-column justify-content-center align-items-center">
-    <h1>Para ti, mi amor 💖</h1>
-    <p>Una colección de momentos especiales solo para ti</p>
+<!-- HERO -->
+<header class="hero text-center text-white">
+    <div class="hero-overlay">
+        <h1>Para ti gorda ❤️</h1>
+        <p>Un pequeño recuerdo de todo lo nuestro</p>
+    </div>
 </header>
 
-<!-- GALERÍA DE VIDEOS -->
+<!-- CONTENIDO -->
 <main class="container my-5">
 
-    <div class="row g-3 justify-content-center">
+    <div class="row justify-content-center g-4">
 
-        <!-- VIDEO 1 -->
-        <div class="col-6 col-md-4 col-lg-3">
-            <div class="video-card" onclick="window.open('https://www.youtube.com/watch?v=InWLCcI3tD0')">
-                <img src="img/amor1.jpeg" alt="Video 1" class="img-fluid rounded">
-                <h5 class="mt-2 text-center">Nuestro primer viaje</h5>
+        <!-- GALERÍA DE FOTOS -->
+        <div class="col-10 col-sm-6 col-md-4">
+            <div class="video-card" data-bs-toggle="modal" data-bs-target="#galeriaViaje">
+                <img src="img/portadaViajeCordoba.jpeg" class="img-fluid rounded">
+                <h5 class="mt-3 text-center">Nuestro viaje a Córdoba ❤️</h5>
             </div>
         </div>
 
-        <!-- VIDEO 2 -->
-        <div class="col-6 col-md-4 col-lg-3">
-            <div class="video-card" onclick="window.open('https://youtu.be/VIDEO2','_blank')">
-                <img src="img/video2.jpg" alt="Video 2" class="img-fluid rounded">
-                <h5 class="mt-2 text-center">Recuerdos juntos</h5>
-            </div>
-        </div>
-
-        <!-- VIDEO 3 -->
-        <div class="col-6 col-md-4 col-lg-3">
-            <div class="video-card" onclick="window.open('https://youtu.be/VIDEO3','_blank')">
-                <img src="img/video3.jpg" alt="Video 3" class="img-fluid rounded">
-                <h5 class="mt-2 text-center">Noche especial</h5>
-            </div>
-        </div>
-
-        <!-- VIDEO 4 -->
-        <div class="col-6 col-md-4 col-lg-3">
-            <div class="video-card" onclick="window.open('https://youtu.be/VIDEO4','_blank')">
-                <img src="img/video4.jpg" alt="Video 4" class="img-fluid rounded">
-                <h5 class="mt-2 text-center">Momento divertido</h5>
+        <!-- VIDEO YOUTUBE -->
+        <div class="col-10 col-sm-6 col-md-4">
+            <div class="video-card"
+                 onclick="window.open('https://youtu.be/InWLCcI3tD0')">
+                <img src="img/portadaVideo.jpeg" class="img-fluid rounded">
+                <h5 class="mt-3 text-center">Nuestro vídeo ❤️</h5>
             </div>
         </div>
 
     </div>
-
 </main>
+
+<!-- MODAL GALERÍA -->
+<div class="modal fade" id="galeriaViaje" tabindex="-1">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content bg-dark">
+
+      <!-- HEADER FIJO Y BONITO -->
+      <div class="modal-header border-0 modal-header-custom">
+        <button type="button"
+                class="btn btn-outline-light btn-sm"
+                data-bs-dismiss="modal">
+            ← Volver
+        </button>
+
+        <h5 class="modal-title text-white text-center flex-grow-1">
+            Nuestro viaje a Córdoba ❤️
+        </h5>
+      </div>
+
+      <div class="modal-body pt-4">
+        <div class="container">
+          <div class="row g-3" id="galeriaFotos">
+            <!-- FOTOS GENERADAS POR JS -->
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- GENERAR 89 FOTOS -->
+<script>
+    const contenedor = document.getElementById("galeriaFotos");
+    const totalFotos = 89;
+
+    for (let i = 1; i <= totalFotos; i++) {
+        contenedor.innerHTML += `
+            <div class="col-6 col-md-4 col-lg-3">
+                <img src="img/viajeCordoba/${i}.jpeg" class="img-fluid rounded gallery-img">
+            </div>
+        `;
+    }
+</script>
+
 </body>
 </html>
