--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 
 <!-- CONTENIDO -->
 <main class="container my-5">
-
     <div class="row justify-content-center g-4">
 
         <!-- GALERÍA DE FOTOS -->
@@ -36,7 +35,7 @@
         <!-- VIDEO YOUTUBE -->
         <div class="col-10 col-sm-6 col-md-4">
             <div class="video-card"
-                 onclick="window.open('https://youtu.be/InWLCcI3tD0')">
+                 onclick="window.open('https://www.youtube.com/watch?v=InWLCcI3tD0&list=RDInWLCcI3tD0&start_radio=1','_blank')">
                 <img src="img/portadaVideo.jpeg" class="img-fluid rounded">
                 <h5 class="mt-3 text-center">Nuestro vídeo ❤️</h5>
             </div>
@@ -50,23 +49,23 @@
   <div class="modal-dialog modal-fullscreen">
     <div class="modal-content bg-dark">
 
-      <!-- HEADER FIJO Y BONITO -->
-      <div class="modal-header border-0 modal-header-custom">
-        <button type="button"
-                class="btn btn-outline-light btn-sm"
-                data-bs-dismiss="modal">
+      <!-- HEADER MODAL -->
+      <div class="modal-header modal-header-custom">
+        <h5 class="modal-title text-white">Nuestro viaje a Córdoba ❤️</h5>
+        <button class="btn btn-outline-light volver-btn" data-bs-dismiss="modal">
             ← Volver
         </button>
-
-        <h5 class="modal-title text-white text-center flex-grow-1">
-            Nuestro viaje a Córdoba ❤️
-        </h5>
       </div>
 
-      <div class="modal-body pt-4">
+      <div class="modal-body">
         <div class="container">
           <div class="row g-3" id="galeriaFotos">
             <!-- FOTOS GENERADAS POR JS -->
+          </div>
+
+          <!-- MENSAJE FINAL -->
+          <div class="final-message">
+              ❤️ Gracias por compartir estos momentos conmigo, te quiero infinito ❤️
           </div>
         </div>
       </div>
