--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- HERO -->
 <header class="hero text-center text-white">
     <div class="hero-overlay">
-        <h1>Para ti gorda ❤️</h1>
+        <h1>Para ti gordita💙</h1>
         <p>Un pequeño recuerdo de todo lo nuestro</p>
     </div>
 </header>
@@ -25,19 +25,19 @@
     <div class="row justify-content-center g-4">
 
         <!-- GALERÍA DE FOTOS -->
-        <div class="col-10 col-sm-6 col-md-4">
+        <div class="col-10 col-sm-8 col-md-6 col-lg-4">
             <div class="video-card" data-bs-toggle="modal" data-bs-target="#galeriaViaje">
                 <img src="img/portadaViajeCordoba.jpeg" class="img-fluid rounded">
-                <h5 class="mt-3 text-center">Nuestro viaje a Córdoba ❤️</h5>
+                <h5 class="mt-3 text-center">Nuestro viaje a Córdoba 💙</h5>
             </div>
         </div>
 
         <!-- VIDEO YOUTUBE -->
-        <div class="col-10 col-sm-6 col-md-4">
+        <div class="col-10 col-sm-8 col-md-6 col-lg-4">
             <div class="video-card"
                  onclick="window.open('https://www.youtube.com/watch?v=InWLCcI3tD0&list=RDInWLCcI3tD0&start_radio=1','_blank')">
                 <img src="img/portadaVideo.jpeg" class="img-fluid rounded">
-                <h5 class="mt-3 text-center">Nuestro vídeo ❤️</h5>
+                <h5 class="mt-3 text-center">Vídeo San Valentin 💙</h5>
             </div>
         </div>
 
@@ -51,7 +51,7 @@
 
       <!-- HEADER MODAL -->
       <div class="modal-header modal-header-custom">
-        <h5 class="modal-title text-white">Nuestro viaje a Córdoba ❤️</h5>
+        <h5 class="modal-title">Nuestro viaje a Córdoba 💙</h5>
         <button class="btn btn-outline-light volver-btn" data-bs-dismiss="modal">
             ← Volver
         </button>
@@ -65,7 +65,7 @@
 
           <!-- MENSAJE FINAL -->
           <div class="final-message">
-              ❤️ Gracias por compartir estos momentos conmigo, te quiero infinito ❤️
+              💙 Gracias por compartir estos momentos conmigo, te amo muchisimo 💙
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@
 
     for (let i = 1; i <= totalFotos; i++) {
         contenedor.innerHTML += `
-            <div class="col-6 col-md-4 col-lg-3">
+            <div class="col-6 col-md-6 col-lg-3">
                 <img src="img/viajeCordoba/${i}.jpeg" class="img-fluid rounded gallery-img">
             </div>
         `;
