--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
 <!-- HERO -->
 <header class="hero text-center text-white">
     <div class="hero-overlay">
-        <h1>Para ti gordita💙</h1>
+        <h1>Para ti gorda 💙</h1>
         <p>Un pequeño recuerdo de todo lo nuestro</p>
     </div>
 </header>
 
 <!-- CONTENIDO -->
 <main class="container my-5">
+
     <div class="row justify-content-center g-4">
 
         <!-- GALERÍA DE FOTOS -->
-        <div class="col-10 col-sm-8 col-md-6 col-lg-4">
+        <div class="col-10 col-sm-6 col-md-4">
             <div class="video-card" data-bs-toggle="modal" data-bs-target="#galeriaViaje">
                 <img src="img/portadaViajeCordoba.jpeg" class="img-fluid rounded">
                 <h5 class="mt-3 text-center">Nuestro viaje a Córdoba 💙</h5>
@@ -33,11 +34,19 @@
         </div>
 
         <!-- VIDEO YOUTUBE -->
-        <div class="col-10 col-sm-8 col-md-6 col-lg-4">
+        <div class="col-10 col-sm-6 col-md-4">
             <div class="video-card"
                  onclick="window.open('https://www.youtube.com/watch?v=InWLCcI3tD0&list=RDInWLCcI3tD0&start_radio=1','_blank')">
                 <img src="img/portadaVideo.jpeg" class="img-fluid rounded">
-                <h5 class="mt-3 text-center">Vídeo San Valentin 💙</h5>
+                <h5 class="mt-3 text-center">Nuestro vídeo 💙</h5>
+            </div>
+        </div>
+
+        <!-- SPOTIFY -->
+        <div class="col-10 col-sm-6 col-md-4">
+            <div class="video-card" data-bs-toggle="modal" data-bs-target="#spotifyModal">
+                <img src="img/portadaSpotify.jpeg" class="img-fluid rounded">
+                <h5 class="mt-3 text-center">Canciones que me recuerdan a ti 💙</h5>
             </div>
         </div>
 
@@ -49,12 +58,9 @@
   <div class="modal-dialog modal-fullscreen">
     <div class="modal-content bg-dark">
 
-      <!-- HEADER MODAL -->
       <div class="modal-header modal-header-custom">
-        <h5 class="modal-title">Nuestro viaje a Córdoba 💙</h5>
-        <button class="btn btn-outline-light volver-btn" data-bs-dismiss="modal">
-            ← Volver
-        </button>
+        <h5 class="modal-title text-white">Nuestro viaje a Córdoba 💙</h5>
+        <button type="button" class="btn btn-primary volver-btn" data-bs-dismiss="modal">Volver</button>
       </div>
 
       <div class="modal-body">
@@ -62,11 +68,41 @@
           <div class="row g-3" id="galeriaFotos">
             <!-- FOTOS GENERADAS POR JS -->
           </div>
+        </div>
+      </div>
 
-          <!-- MENSAJE FINAL -->
-          <div class="final-message">
-              💙 Gracias por compartir estos momentos conmigo, te amo muchisimo 💙
-          </div>
+    </div>
+  </div>
+</div>
+
+<!-- MODAL SPOTIFY -->
+<div class="modal fade" id="spotifyModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content bg-dark">
+      
+      <div class="modal-header border-0">
+        <h5 class="modal-title text-white">Canciones que me recuerdan a ti 💙</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+      </div>
+      
+      <div class="modal-body p-3 text-center">
+        <!-- Reproductor embebido -->
+        <iframe 
+            src="https://open.spotify.com/embed/playlist/6mB6sAQCKldzuSMUNbw2j6"
+            width="100%" 
+            height="380" 
+            frameborder="0" 
+            allowtransparency="true" 
+            allow="encrypted-media">
+        </iframe>
+
+        <!-- Botón para abrir directamente en Spotify -->
+        <div class="mt-3">
+          <a href="https://open.spotify.com/playlist/6mB6sAQCKldzuSMUNbw2j6" 
+             target="_blank" 
+             class="btn btn-primary">
+             Abrir en Spotify
+          </a>
         </div>
       </div>
 
