--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Para ti ❤️</title>
+    <title>Para ti 💙</title>
 
     <!-- Bootstrap 5.3.8 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,7 +15,7 @@
 <!-- HERO -->
 <header class="hero text-center text-white">
     <div class="hero-overlay">
-        <h1>Para ti gorda ❤️</h1>
+        <h1>Para ti gorda <span class="corazon">💙</span></h1>
         <p>Un pequeño recuerdo de todo lo nuestro</p>
     </div>
 </header>
@@ -112,7 +112,7 @@
 
     for (let i = 1; i <= totalFotos; i++) {
         contenedor.innerHTML += `
-            <div class="col-6 col-md-4 col-lg-3">
+            <div class="col-6 col-md-6 col-lg-3">
                 <img src="img/viajeCordoba/${i}.jpeg" class="img-fluid rounded gallery-img">
             </div>
         `;
